--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klas Inloggen</title>
-  <!-- Firebase CDN -->
+  <!-- Firebase CDN for modular imports -->
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
-  <script src="firebase.js" defer></script> <!-- Laad je eigen Firebase-configuraties -->
+  <script type="module" src="firebase.js" defer></script> <!-- Laad je eigen Firebase-configuraties -->
 </head>
 <body>
   <h1>Klas Inloggen</h1>
@@ -17,7 +17,9 @@
     <button type="submit">Ga verder</button>
   </form>
 
-  <script>
+  <script type="module">
+    import { database, ref, get } from "./firebase.js";
+
     // Eventlistener voor het formulier
     const form = document.getElementById("class-form");
 
@@ -25,17 +27,20 @@
       e.preventDefault();
       const className = document.getElementById("class-name").value;
 
-      // Haal database-referentie op uit de globale `firebase` objecten
-      const database = firebase.database();
-      const classRef = database.ref(`classes/${className}`);
+      // Haal database-referentie op uit de geïmporteerde functies
+      const classRef = ref(database, `classes/${className}`);
 
       // Controleer of de klas bestaat
-      const snapshot = await classRef.get();
-      if (snapshot.exists()) {
-        localStorage.setItem("selectedClass", className);
-        window.location.href = "import.html"; // Redirect naar een andere pagina
-      } else {
-        alert("Deze klas bestaat niet!");
+      try {
+        const snapshot = await get(classRef);
+        if (snapshot.exists()) {
+          localStorage.setItem("selectedClass", className);
+          window.location.href = "import.html"; // Redirect naar een andere pagina
+        } else {
+          alert("Deze klas bestaat niet!");
+        }
+      } catch (error) {
+        console.error("Fout bij het ophalen van gegevens:", error);
       }
     });
   </script>
