--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
       e.preventDefault();
       const className = document.getElementById("class-name").value;
 
-      // Haal database-referentie op uit de geïmporteerde functies
-      const classRef = ref(database, `classes/${className}`);
+      // Haal de database-referentie op voor de ingevoerde klasnaam
+      const classRef = ref(database, `klassen/${className}`);
 
-      // Controleer of de klas bestaat
       try {
         const snapshot = await get(classRef);
         if (snapshot.exists()) {
