--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Klas Inloggen</title>
-  <!-- Firebase CDN for modular imports -->
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database.js"></script>
-  <script type="module" src="firebase.js" defer></script> <!-- Laad je eigen Firebase-configuraties -->
+  <!-- Gebruik ES-modules voor Firebase -->
+  <script type="module" src="firebase.js" defer></script>
 </head>
 <body>
   <h1>Klas Inloggen</h1>
