--- a/add_students.html
+++ b/add_students.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Login</title>
+    <title>Add Students</title>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
@@ -33,12 +33,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
-        <form id="loginForm">
-            <label for="classNumber">Klas:</label>
-            <input type="text" id="classNumber" required>
-            <button type="submit">Login</button>
+        <h1>Add Students</h1>
+        <form id="addStudentForm">
+            <label for="studentName">Student Names (separate with semicolons, e.g., Jan;Dirk;Liesa):</label>
+            <input type="text" id="studentName" required placeholder="Jan;Dirk;Liesa;Jeroen;Michael">
+            <button type="submit">Add Students</button>
         </form>
+        <div class="button-group">
+            <button id="viewStudentsButton">Already Added</button>
+            <button id="submitStudents">Go to Class Page</button>
+        </div>
     </div>
     <script type="module" src="main.js"></script>
 </body>
