--- a/class_page.html
+++ b/class_page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Login</title>
+    <title>Class Page</title>
     <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
@@ -33,12 +33,31 @@
 </head>
 <body>
     <div class="container">
-        <h1>Login</h1>
-        <form id="loginForm">
-            <label for="classNumber">Klas:</label>
-            <input type="text" id="classNumber" required>
-            <button type="submit">Login</button>
-        </form>
+        <h1>Class Students</h1>
+        <div class="table-container">
+            <table id="studentsTable">
+                <thead>
+                    <tr>
+                        <th>Student Name</th>
+                        <th>Play Corner 1</th>
+                        <th>Play Corner 2</th>
+                        <th>Play Corner 3</th>
+                        <th>Play Corner 4</th>
+                        <th>Play Corner 5</th>
+                        <th>Play Corner 6</th>
+                        <th>Play Corner 7</th>
+                        <th>Play Corner 8</th>
+                    </tr>
+                </thead>
+                <tbody id="studentsBody">
+                    <!-- Student rows will be populated here -->
+                </tbody>
+            </table>
+        </div>
+        <div class="button-group">
+            <button id="resetButton">Reset All</button>
+            <button id="studentsButton">Edit Students</button>
+        </div>
     </div>
     <script type="module" src="main.js"></script>
 </body>
