--- a/class_page.html
+++ b/class_page.html
@@ -33,7 +33,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Class Students</h1>
+        <div class="logo-container">
+            <svg class="logo" viewBox="0 0 300 60">
+                <text x="0" y="40" fill="#56AFC9" font-size="40">#</text>
+                <text x="40" y="40" fill="#ffffff" font-size="40">Devwebmichael</text>
+            </svg>
+        </div>
+        <h1>Class Overview</h1>
         <div class="table-container">
             <table id="studentsTable">
                 <thead>
@@ -60,5 +66,15 @@
         </div>
     </div>
     <script type="module" src="main.js"></script>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                &copy; 2025 Devwebmichael. All rights reserved.
+            </div>
+            <div class="footer-right">
+                Version 0.7.4
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
