--- a/add_students.html
+++ b/add_students.html
@@ -33,17 +33,33 @@
 </head>
 <body>
     <div class="container">
-        <h1>Add Students</h1>
+        <div class="logo-container">
+            <svg class="logo" viewBox="0 0 300 60">
+                <text x="0" y="40" fill="#56AFC9" font-size="40">#</text>
+                <text x="40" y="40" fill="#ffffff" font-size="40">Devwebmichael</text>
+            </svg>
+        </div>
+        <h1>Voeg namen toe</h1>
         <form id="addStudentForm">
-            <label for="studentName">Student Names (separate with semicolons, e.g., Jan;Dirk;Liesa):</label>
-            <input type="text" id="studentName" required placeholder="Jan;Dirk;Liesa;Jeroen;Michael">
-            <button type="submit">Add Students</button>
+            <label for="studentName">Namen van leerlingen (gescheiden door ; [Vb : Jeroen;Danny]):</label>
+            <input type="text" id="studentName" required placeholder="Jeroen;Danny;Michael">
+            <button type="submit">Voeg naam toe</button>
         </form>
         <div class="button-group">
-            <button id="viewStudentsButton">Already Added</button>
-            <button id="submitStudents">Go to Class Page</button>
+            <button id="viewStudentsButton">Pas klas aan</button>
+            <button id="submitStudents">Ga naar klas pagina</button>
         </div>
     </div>
     <script type="module" src="main.js"></script>
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-left">
+                &copy; 2025 Devwebmichael. All rights reserved.
+            </div>
+            <div class="footer-right">
+                Version 0.7.4
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
