--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <body>
     <div class="container">
         <div class="logo-container">
-            <svg class="logo" viewBox="0 0 300 60">
-                <text x="0" y="40" fill="#56AFC9" font-size="40">#</text>
-                <text x="40" y="40" fill="#ffffff" font-size="40">Devwebmichael</text>
+            <svg class="logo" viewBox="0 0 250 40" preserveAspectRatio="xMinYMid meet">
+                <text x="0" y="25" fill="#56AFC9" font-size="25">#</text>
+                <text x="30" y="25" fill="#ffffff" font-size="25">Devwebmichael</text>
             </svg>
         </div>
         <h1>Welkom bij Klasbeheer</h1>
