--- a/class_page.html
+++ b/class_page.html
@@ -36,7 +36,7 @@
         <div class="logo-container">
             <svg class="logo" viewBox="0 0 250 40" preserveAspectRatio="xMinYMid meet">
                 <text x="0" y="25" fill="#56AFC9" font-size="25">#</text>
-                <text x="30" y="25" fill="#ffffff" font-size="25">Devwebmichael</text>
+                <text x="30" y="25" fill="#ffffff" font-size="25">DevwebM</text>
             </svg>
         </div>
         <h1>Class Overview</h1>
