--- a/class_page.html
+++ b/class_page.html
@@ -44,7 +44,7 @@
             <table id="studentsTable">
                 <thead>
                     <tr>
-                        <th>Student Name</th>
+                        <th>Naam Leerling</th>
                         <th>Play Corner 1</th>
                         <th>Play Corner 2</th>
                         <th>Play Corner 3</th>
@@ -61,8 +61,8 @@
             </table>
         </div>
         <div class="button-group">
-            <button id="resetButton">Reset All</button>
-            <button id="studentsButton">Edit Students</button>
+            <button id="resetButton">Reset</button>
+            <button id="studentsButton">Pas Klas Aan</button>
         </div>
     </div>
     <script type="module" src="main.js"></script>
