--- a/class_page.html
+++ b/class_page.html
@@ -44,15 +44,15 @@
             <table id="studentsTable">
                 <thead>
                     <tr>
-                        <th>Naam Leerling</th>
-                        <th>Play Corner 1</th>
-                        <th>Play Corner 2</th>
-                        <th>Play Corner 3</th>
-                        <th>Play Corner 4</th>
-                        <th>Play Corner 5</th>
-                        <th>Play Corner 6</th>
-                        <th>Play Corner 7</th>
-                        <th>Play Corner 8</th>
+                        <th><span>Leerlingen</span></th>
+                        <th><span>Play Corner 1</span></th>
+                        <th><span>Play Corner 2</span></th>
+                        <th><span>Play Corner 3</span></th>
+                        <th><span>Play Corner 4</span></th>
+                        <th><span>Play Corner 5</span></th>
+                        <th><span>Play Corner 6</span></th>
+                        <th><span>Play Corner 7</span></th>
+                        <th><span>Play Corner 8</span></th>
                     </tr>
                 </thead>
                 <tbody id="studentsBody">
