--- a/class_page.html
+++ b/class_page.html
@@ -39,7 +39,7 @@
                 <text x="30" y="25" fill="#ffffff" font-size="25">DevwebM</text>
             </svg>
         </div>
-        <h1>Klas Overzicht</h1>
+        <h1 class="class-page-title">Klas Overzicht</h1>
         <div class="table-container">
             <table id="studentsTable">
                 <thead>
