--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <text x="30" y="25" fill="#ffffff" font-size="25">DevwebM</text>
             </svg>
         </div>
-        <h1>Welkom bij Klasbeheer</h1>
+        <h1 class="index-title">Welkom bij Klasbeheer</h1>
         <form id="loginForm">
             <label for="classNumber">Klas:</label>
             <input type="text" id="classNumber" required placeholder="Vul klas nummer in">
