--- a/view_students.html
+++ b/view_students.html
@@ -39,8 +39,8 @@
                 <text x="30" y="25" fill="#ffffff" font-size="25">DevwebM</text>
             </svg>
         </div>
-        <h1>Leerlingen Overzicht</h1>
-        <div class="students-grid" id="studentsList">
+        <h1 class="view-students-title">Leerlingen Overzicht</h1>
+        <div class="student-grid" id="studentsList">
             <!-- Students will be listed here -->
         </div>
         <div class="button-group">
