--- a/view_students.html
+++ b/view_students.html
@@ -48,6 +48,14 @@
             <button id="classPageButton" class="primary-button">Ga naar klas pagina</button>
         </div>
     </div>
+    <div class="footer">
+        <div class="footer-left">
+            &copy; 2025 DevwebM. All rights reserved.
+        </div>
+        <div class="footer-right">
+            Version 1.3
+        </div>
+    </div>
     <script type="module" src="main.js"></script>
 </body>
 </html>
