--- a/add_students.html
+++ b/add_students.html
@@ -53,10 +53,10 @@
     <footer class="common-footer">
         <div class="common-footer-content">
             <div class="common-footer-left">
-                &copy; 2025 Devwebmichael. All rights reserved.
+                &copy; 2025 DevwebM. All rights reserved.
             </div>
             <div class="common-footer-right">
-                Version 0.7.4
+                Version 1.3
             </div>
         </div>
     </footer>
