--- a/class_page.html
+++ b/class_page.html
@@ -69,10 +69,10 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-left">
-                &copy; 2025 DevwebM. All rights reserved.
+                &copy; 2025 Devwebmichael. All rights reserved.
             </div>
             <div class="footer-right">
-                Version 1.3
+                Version 0.7.4
             </div>
         </div>
     </footer>
